--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -6,11 +6,10 @@ div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarCtrl')
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') withings-demo
+      a.navbar-brand(href='/') withings-lib
 
     div#navbar-main.navbar-collapse.collapse(collapse='isCollapsed')
       ul.nav.navbar-nav
-        li(ng-repeat='item in menu', ng-class='{active: isActive(item.link)}')
-          a(ng-href='{{item.link}}') {{item.title}}
         li
-          a(ng-href='#' ng-click="oauth()") OAuth
+          p.navbar-btn
+            a.btn.btn-default(ng-href='#' ng-click="oauth()") Authorize
