scaffold steps and weight for dashboard

--- a/client/app/dashboard/dashboard.jade
+++ b/client/app/dashboard/dashboard.jade
@@ -8,8 +8,12 @@ header#banner.hero-unit
   .row
     .col-lg-6
       h1.page-header Steps:
+      pre
+        p {{stepsRes}}
     .col-lg-6
       h1.page-header Weight:
+      pre
+        p {{weightRes}}
 
 footer.footer
   .container
