remove hardcoded monthly values

--- a/client/app/dashboard/dashboard.jade
+++ b/client/app/dashboard/dashboard.jade
@@ -7,11 +7,11 @@ header#banner.hero-unit
 .container
   .row
     .col-lg-6
-      h1.page-header Steps:
+      h1.page-header Monthly Steps:
       pre
         p {{stepsRes}}
     .col-lg-6
-      h1.page-header Weight:
+      h1.page-header Monthly Weight:
       pre
         p {{weightRes}}
   .row
